# saturnappimageeditor

./: CMakeLists.txt  io.github.tridentu.saturnappimageeditor.desktop  io.github.tridentu.saturnappimageeditor.metainfo.xml  org.kde.saturnappimageeditor.desktop  org.kde.saturnappimageeditor.json  org.kde.saturnappimageeditor.metainfo.xml  saturnappimageeditor.kdev4
android/: AndroidManifest.xml
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  saturnappimageeditorconfig.kcfg  saturnappimageeditorconfig.kcfgc
src/contents/ui/: About.qml  main.qml
